2007-04-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sets.tcl: Renamed various commands handling accelerators. This
	  brought their names into compliance with the requirements of the
	  'TestAccel*' commands in devtools.

	* sets.test: Rewritten to use the 'TestAccel*' convenience
	  commands.

	* tree.test: Rewritten to use the 'TestAccel*' convenience
	  commands. Additionally moved the helper commands into a new,
	  separate file

	* tree/tests/Xsupport: New file now containing the helper commands
	  for testing struct::tree.

	* graph.test: Rewritten to make use of 'useAccel'.

	* graph.test:               The testsuite already switches various
	* graph/tests/arcs.test:    implementations of struct::graph. Added
	* graph/tests/assign.test:  the switching of struct::set
	* graph/tests/command.test: implementations.
	* graph/tests/deserialize.test:
	* graph/tests/nodes.test:
	* graph/tests/rassign.test:
	* graph/tests/serialize.test:
	* graph/tests/swap.test:
	* graph/tests/walk.test:
	* graph/tests/arc/attr.test:
	* graph/tests/arc/delete.test:
	* graph/tests/arc/exists.test:
	* graph/tests/arc/flip.test:
	* graph/tests/arc/insert.test:
	* graph/tests/arc/move-source.test:
	* graph/tests/arc/move-target.test:
	* graph/tests/arc/move.test:
	* graph/tests/arc/rename.test:
	* graph/tests/arc/source.test:
	* graph/tests/arc/target.test:
	* graph/tests/attr/append.test:
	* graph/tests/attr/get.test:
	* graph/tests/attr/getall.test:
	* graph/tests/attr/keyexists.test:
	* graph/tests/attr/keys.test:
	* graph/tests/attr/lappend.test:
	* graph/tests/attr/set.test:
	* graph/tests/attr/unset.test:
	* graph/tests/node/attr.test:
	* graph/tests/node/degree.test:
	* graph/tests/node/delete.test:
	* graph/tests/node/exists.test:
	* graph/tests/node/insert.test:
	* graph/tests/node/opposite.test:
	* graph/tests/node/rename.test:

2007-03-26  Andreas Kupries  <andreask@activestate.com>

	* struct_tree.man:  Documentation improvements as suggested by Lars